fix logo position on mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -15,7 +15,7 @@ h3,h4 {
 }
 
 .vignette-content {
-  height: 12em;
+  min-height: 12em;
   padding: 0.5px;
   margin: 0.5px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, .25);
@@ -92,7 +92,5 @@ a:hover {
 }
 
 .sponsor_logo_area {
-  height: 10em;
   padding: 16px;
-
 }
